<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My_test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="imageinfo">Tree</string>
    <string name="text1">帳號</string>
    <string name="text2">密碼</string>
    <string name="button1">登入</string>
    <string name="button2">取消</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="textView1"></string>
    <string name="newPageBtn">開新頁</string>
    <string name="fragment_first_account_textView">帳號</string>
    <string name="fragment_first_password_textView">密碼</string>
    <string name="fragment_first_loginBtn">登入</string>
    <string name="fragment_first_cancelBtn">取消</string>
    <string name="title_activity_fragment">Fragment</string>
    <string name="fragmentok">SharePref讀取</string>
    <string name="title_activity_fragmentsecond">Fragmentsecond</string>
    <string name="register">註冊</string>
    <string name="sqlite">Sqlite讀取</string>

</resources>
