<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp" >

        <TextView
            android:id="@+id/fragment_first_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/fragment_first_account_textView" />

        <EditText
            android:id="@+id/fragment_first_account_editText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:hint="請輸入帳號"
            android:singleLine="true"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="58dp" >

        <TextView
            android:id="@+id/fragment_first_password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/fragment_first_password_textView" />

        <EditText
            android:id="@+id/fragment_first_password_editText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="請輸入密碼"
            android:singleLine="true"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp" >

        <Button
            android:id="@+id/fragment_first_loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_first_loginBtn" />

        <Button
            android:id="@+id/fragment_first_cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_first_cancelBtn" />
    </LinearLayout>

</RelativeLayout>